--- a/css/main.css
+++ b/css/main.css
@@ -1,190 +1,203 @@
-@font-face {
-  font-family: 'Wisdom Script';
-  src: url('../fonts/wisdom-script.otf') format('opentype');
+html{
+    font-size: 16px;
 }
-
-html {
-	font-size:16px;
+@font-face {
+	font-family: 'Wisdom Script';
+	src: url('../fonts/wisdom-script.otf') format('opentype');
 }
 
 body {
-  font-family: 'Montserrat', Helvetica, Arial, sans-serif;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-	font-size:1em;
+    font-family: 'Montserrat', Helvetica, Arial, sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1em;
 }
 
 .container {
-  max-width: 1200px;
-  margin: 0 auto;
+	max-width: 1200px;
+    width: 90%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
 }
 
 h1,
 h2,
 h3,
 h4 {
-  color: black;
-  text-transform: uppercase;
-  font-weight: 700;
-}
-
-h1 {
-  font-size: 1.875em;
-}
-
-h2 {
-  font-size: 1.5em;
-}
-
-h3 {
-  font-size: 1.125em;
-}
-
-h4 {
-  font-size: 0.75em;
+	color: black;
+	text-transform: uppercase;
+	font-weight: 700;
 }
 
 p {
-  font-size: 0.875em;
-  line-height: 21px;
-  padding: 0 30px;
+	font-size: 14px;
+	line-height: 21px;
+}
+
+ul {
+    margin: 0;
 }
 
 /*The widths are in a percentage!*/
 header {
-  height: 110px;
-  border-bottom: 3px solid #77a466;
-  margin: 0 auto;
+	border-bottom: 3px solid #77a466;
+    text-align: center;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
 }
 
 header h1 {
-  float: left;
-  margin: 0;
-  padding: 38px 0;
+    font-size: 1.875em;
+	margin: 0;
+    padding: 38px 20px 20px 20px;
+    border-bottom: 3px solid #77a466;
+    width: 100%;
 }
-
 header h1 span {
-  color: #77a466;
+	color: #77a466;
 }
 
 header nav {
-  float: right;
-  padding: 46px 0;
+    padding: 20px 0;
+    width: 100%;
 }
 
 header nav ul {
-  margin: 0;
-  padding: 0;
+	margin: 0;
+	padding: 0;
 }
 
 header nav ul li {
-  text-transform: uppercase;
-  font-weight: 700;
-  font-size: 1.125em;
-  padding: 0 10px;
-  display: inline;
+	text-transform: uppercase;
+	font-weight: 700;
+	font-size: .875em;
+    padding: 10px 0;
+    list-style: none;
 }
 
 header nav ul li a {
-  text-decoration: none;
-  color: #77a466;
+	text-decoration: none;
+	color:#77a466;
 }
 
 /*The widths are in a percentage!*/
 .top-section,
 .bottom-section {
-  margin: 0 auto;
-  clear: both;
-}
-
-.main-image {
-  height: auto;
-  float: left;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
 }
 
 .main-image img {
-  width: 100%;
-  border-bottom: 3px solid #77a466;
-}
-
-.main-title {
-  height: auto;
-  float: left;
+	width: 100%;
+	border-bottom: 3px solid #77a466;
 }
 
 .main-title h3 {
-  text-align: left;
-  padding: 5px 0;
-  color: #77a466;
+	text-align: left;
+	padding: 5px 0;
+    color: #77a466;
+    font-size: 1.125em;
 }
 
 .main-title p {
-  padding: 0;
-  font-size: 16px;
-  line-height: 25px;
+	padding: 0;
+	font-size: 1em;
+	line-height: 1.5625;
 }
 
 .section-one,
 .section-two,
 .section-three {
-  width: 33%;
-  height: auto;
-  float: left;
-  border-top: 1px solid #eee;
-}
-
-.section-one h4 {
-  padding: 10px 0;
-}
-
-.section-two {
-  border-left: 1px solid #eee;
-  border-right: 1px solid #eee;
-}
-
-.section-two h4,
-.section-three h4 {
-  padding: 10px 30px;
+    border-top: 1px solid #eee;
+    width: 100%;
 }
 
 .menu {
-  list-style: none;
-  padding: 0;
+	list-style: none;
+	padding: 0;
 }
 
 .menu li {
-  padding: 10px 0;
-  color: #77a466;
+	padding: 10px 0;
+	color:#77a466;
 }
 
 .reviews {
-  color: #333;
-  font-size: 16px;
-  line-height: 21px;
+	color: #333;
+	font-size: 1em;
+	line-height: 1.3125;
 }
 
 .address {
-  font-size: 16px;
-  line-height: 24px;
+	font-size: 1em;
+	line-height: 1.5;
 }
 
 /*The widths are in a percentage!*/
 footer {
-  height: 50px;
-  border-top: 3px solid #eee;
-  margin: 0 auto;
-  clear: both;
-  text-align: center;
+	border-top: 3px solid #eee;
+    text-align: center;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row wrap;
 }
 
 footer span {
-  font-family: 'Wisdom Script', cursive;
-  text-transform: lowercase;
-  color: #77a466;
-  font-size: 14px;
+	font-family: 'Wisdom Script', cursive;
+	text-transform: lowercase;
+	color: #77a466;
+	font-size: .875em;
 }
 
-@media screen and (min-width: 450px) {}
+@media only screen and (min-width: 768px) {
+    .bottom-section{
+        justify-content: space-between;
+        align-items: flex-start;
+        border-top: 1px solid #eee;
+    }
 
-@media screen and (min-width: 920px) {}
+    .section-one,
+    .section-two,
+    .section-three {
+        border-top: none;
+        flex-basis: 30%;
+    }
+
+    .section-two {
+        border-left: 1px solid #eee;
+        border-right: 1px solid #eee;
+        padding: 0 20px;
+    }
+}
+
+@media only screen and (min-width: 1200px) {
+    header {
+        justify-content: space-between;
+    }
+
+    header h1 {
+        width: 30%;
+        padding: 0;
+        border-bottom: none;
+        text-align: left;
+    }
+
+    header nav {
+        width: 40%;
+    }
+
+    header nav ul {
+        display: flex;
+        justify-content: space-between;
+    }
+}
